--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,7 @@ body {
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  font-weight: 400;
 }
 
 h1,
@@ -27,6 +28,7 @@ blockquote {
 
 a {
   color: inherit;
+  text-underline-offset: 4px;
 }
 
 img {
