--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,354 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  padding: 92px 24px 92px;
+  color: #000;
+  font-family: Raleway;
+  font-size: 18px;
+}
+
+.header__menu {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  padding-right: 10px;
+}
+
+.header__links-list {
+  display: flex;
+  flex-direction: row;
+  gap: 32px;
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link_active {
+  text-decoration: none;
+  letter-spacing: 0;
+}
+
+.header__link {
+  letter-spacing: 0.18px;
+}
+
+.header__logo {
+  display: block;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+}
+
+address {
+  font-style: normal;
+}
+
+.address {
+  display: grid;
+}
+
+.header__address {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-self: end;
+  width: 241px;
+  height: 98px;
+  line-height: 25px;
+  margin-right: 25px;
+}
+
+.header__address-location {
+  line-height: 24.3px;
+}
+
+.cover {
+  padding: 0 0 30px;
+  background-image: url(/images/cover.jpg);
+  min-height: 757px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 0.5);
+  z-index: -1;
+}
+
+.cover__title {
+  color: #FFF;
+  font-family: Raleway;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 162px 50px 0;
+  line-height: 124px;
+}
+
+.aligned-text {
+  display: block;
+  letter-spacing: 30px;
+}
+
+.aligned-text_center {
+  text-align: center;
+  padding-right: 30px;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 80px;
+  padding-top: 120px;
+  margin-right: 50px;
+}
+
+.cover__description-text {
+  color: #FFF;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  padding: 12px 32px;
+  font-size: 22px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #fff;
+  cursor: pointer;
+}
+
+.lots {
+  padding: 0 0 146px;
+}
+
+.lots__heading {
+  color: #000;
+  font-family: Raleway;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  padding: 179px 915px 27px 64px;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 25px;
+  padding: 0 24px 30px;
+  list-style: none;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  height: 563px;
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  position: relative;
+  z-index: 0;
+  max-height: 100%;
+  padding: 51px 40px 48px;
+}
+
+.card_type_film {
+  background-image: url(/images/card-lot-01.jpg);
+  min-height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+}
+
+.card_type_book {
+  background-image: url(/images/card-lot-02.jpg);
+  min-height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+}
+
+.card_type_picture {
+  background-image: url(/images/card-lot-03.jpg);
+  min-height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+}
+
+.card__title {
+  color: #FFF;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+  text-decoration-thickness: 1px;
+}
+
+.card__text {
+  color: #FFF;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.lots__look-more-link {
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding: 0 844px 0 64px;
+}
+
+.about {
+  padding: 0 24px 180px;
+}
+
+.about__column {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  gap: 25px;
+}
+
+.about__logo {
+  display: grid;
+  grid-column: span 1;
+  grid-row: span 2;
+  justify-self: center;
+  margin-top: 35px;
+  width: 240px;
+  height: 240px;
+  background-color: #000;
+  border-radius: 50%;
+}
+
+.about__logo-image {
+  display: block;;
+  width: 148px;
+  height: 114px;
+  margin: auto;
+}
+
+.about__title {
+  display: grid;
+  grid-column-start: 2;
+  color: #000;
+  font-family: Raleway;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  margin-top: 136px;
+  margin-bottom: 77px;
+}
+
+.about__text {
+  display: grid;
+  grid-column-start: 2;
+  color: #000;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  gap: 24px;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  padding: 0 50px 88px 50px;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.footer__address {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  justify-self: start;
+  width: 241px;
+  height: 98px;
+  line-height: 25px;
+}
+
+.footer__menu {
+  text-align: center;
+}
+
+.footer__menu-list {
+  list-style: none;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: flex-end;
+  gap: 48px;
+  list-style: none;
+}
+
+.footer__social-link {
+  width: 48px;
+  height: 48px;
+}
