--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 92px 24px 92px;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-size: 18px;
 }
 
@@ -28,7 +28,6 @@
 
 .header__link_active {
   text-decoration: none;
-  letter-spacing: 0;
 }
 
 .header__link {
@@ -37,6 +36,7 @@
 
 .header__logo {
   display: block;
+  text-decoration: none;
 }
 
 .header__logo-image {
@@ -44,32 +44,20 @@
   height: 105px;
 }
 
-address {
+.address {
+  line-height: 25px;
+  max-width: 235px;
   font-style: normal;
 }
 
-.address {
-  display: grid;
-}
-
 .header__address {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   justify-self: end;
-  width: 241px;
-  height: 98px;
-  line-height: 25px;
-  margin-right: 25px;
-}
-
-.header__address-location {
-  line-height: 24.3px;
+  margin-right: 30px;
 }
 
 .cover {
   padding: 0 0 30px;
-  background-image: url(/images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   min-height: 757px;
   background-repeat: no-repeat;
   background-position: center;
@@ -84,13 +72,13 @@ address {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(0 0 0 / 0.5);
+  background-color: rgb(0 0 0 / 0.6);
   z-index: -1;
 }
 
 .cover__title {
   color: #FFF;
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-size: 100px;
   font-style: normal;
   font-weight: 700;
@@ -142,6 +130,7 @@ address {
 
 .bet-button {
   padding: 12px 32px;
+  font-family: Raleway, Arial, sans-serif;
   font-size: 22px;
   font-weight: 500;
   text-transform: uppercase;
@@ -157,7 +146,7 @@ address {
 
 .lots__heading {
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -177,7 +166,7 @@ address {
 
 .lots__card-list-item {
   width: 334px;
-  height: 563px;
+  min-height: 563px;
 }
 
 .card-link {
@@ -192,37 +181,30 @@ address {
   position: relative;
   z-index: 0;
   max-height: 100%;
-  padding: 51px 40px 48px;
+  min-height: 100%;
+  padding: 51px 40px 46px;
+
 }
 
 .card_type_film {
-  background-image: url(/images/card-lot-01.jpg);
-  min-height: 100%;
+  background-image: url(../images/card-lot-01.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  position: relative;
-  z-index: 0;
 }
 
 .card_type_book {
-  background-image: url(/images/card-lot-02.jpg);
-  min-height: 100%;
+  background-image: url(../images/card-lot-02.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  position: relative;
-  z-index: 0;
 }
 
 .card_type_picture {
-  background-image: url(/images/card-lot-03.jpg);
-  min-height: 100%;
+  background-image: url(../images/card-lot-03.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  position: relative;
-  z-index: 0;
 }
 
 .card__title {
@@ -238,7 +220,7 @@ address {
 
 .card__text {
   color: #FFF;
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -287,7 +269,7 @@ address {
   display: grid;
   grid-column-start: 2;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -301,7 +283,7 @@ address {
   display: grid;
   grid-column-start: 2;
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -312,21 +294,15 @@ address {
 .footer {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
-  padding: 0 50px 88px 50px;
-  font-family: Raleway;
+  padding: 0 50px 85px 50px;
+  font-family: Raleway, Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
 }
 
 .footer__address {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
   justify-self: start;
-  width: 241px;
-  height: 98px;
-  line-height: 25px;
 }
 
 .footer__menu {
@@ -349,6 +325,10 @@ address {
 }
 
 .footer__social-link {
+  text-decoration: none;
+}
+
+.footer__social-icon {
   width: 48px;
   height: 48px;
 }
